--- a/styles/examples.css
+++ b/styles/examples.css
@@ -2,4 +2,7 @@ code {
     background-color: #eee;
     padding: 10px;
     border-radius: 5px;
+    display: block;
+    border: 1px solid #999;
+    max-width: 500px;
 }
